--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,19 @@
 }
 
 .game-options {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 10px;
+}
+
+.margin-right {
+  margin-right: 10px;
+}
+
+.ruleset-input {
+  max-width: 40px;
+  margin-left: 5px;
 }
 
 .deck-info {
