--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,10 @@
   margin: 5px;
   min-width: 200px;
   border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .flex-center {
