--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,17 @@
   justify-content: center;
 }
 
+.pile-on-fire {
+  margin: 5px;
+  min-width: 200px;
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: darkorange;
+}
+
 .flex-center {
   display: flex;
   align-items: center;
