--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,17 @@
   background-color: darkorange;
 }
 
+.pile-destroyed {
+  margin: 5px;
+  min-width: 200px;
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: darkred;
+}
+
 .flex-center {
   display: flex;
   align-items: center;
