--- a/src/App.css
+++ b/src/App.css
@@ -37,15 +37,22 @@
   }
 }
 
-.game-options {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.margin-right {
+  margin-right: 10px;
+}
+
+.margin-bottom {
   margin-bottom: 10px;
 }
 
-.margin-right {
-  margin-right: 10px;
+.option-label {
+  font-size: 13.3333px;
+}
+
+.align-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .ruleset-select {
