--- a/src/App.css
+++ b/src/App.css
@@ -64,10 +64,6 @@
   margin-left: 5px;
 }
 
-.deck-info {
-  margin-bottom: 10px;
-}
-
 .pile-set {
   margin-bottom: 10px;
 }
@@ -108,6 +104,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.flex-space-evenly {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .start-text {
