--- a/src/App.css
+++ b/src/App.css
@@ -118,10 +118,8 @@
   justify-content: center;
 }
 
-.flex-space-evenly {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+.half-width {
+  width: 50%
 }
 
 .start-text {
