--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 25vh;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.elements {
+  margin: 20vh 5vw 0vh 5vw;
 }
 
 .App-link {
@@ -89,7 +92,7 @@
 
 .pile {
   margin: 5px;
-  min-width: 200px;
+  min-width: 100px;
   border: 1px solid white;
   display: flex;
   flex-direction: column;
@@ -99,7 +102,7 @@
 
 .pile-on-fire {
   margin: 5px;
-  min-width: 200px;
+  min-width: 100px;
   border: 1px solid white;
   display: flex;
   flex-direction: column;
@@ -110,7 +113,7 @@
 
 .pile-destroyed {
   margin: 5px;
-  min-width: 200px;
+  min-width: 100px;
   border: 1px solid white;
   display: flex;
   flex-direction: column;
@@ -129,8 +132,16 @@
   justify-content: center;
 }
 
+.space-around {
+  justify-content: space-around;
+}
+
 .half-width {
   width: 50%
+}
+
+.game-info-text {
+  font-size: calc(10px + 1vmin);
 }
 
 .start-text {
@@ -156,14 +167,14 @@
 
 .card {
   margin: 5px;
-  min-width: 80px;
+  min-width: 60px;
   border: 1px solid white;
   font-size: 24px;
 }
 
 .card-on-fire {
   margin: 5px;
-  min-width: 80px;
+  min-width: 60px;
   border: 1px solid white;
   font-size: 24px;
   background-color: dodgerblue;
