--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,12 @@
   margin-bottom: 5px;
 }
 
+.align-centre {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .align-right {
   display: flex;
   flex-direction: column;
