--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,6 +63,10 @@
   margin-bottom: 10px;
 }
 
+.in-progress-message {
+  font-size: 12pt;
+}
+
 .option-button {
   display: block;
   margin-bottom: 5px;
@@ -157,10 +161,6 @@
   justify-content: space-around;
 }
 
-/* .space-between {
-  justify-content: space-between;
-} */
-
 .half-width {
   width: 50%
 }
@@ -188,6 +188,15 @@
 
 .starting-player-selector-text {
   font-size: 12pt;
+}
+
+.hand-summary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 80px;
+  margin-bottom: 10px;
 }
 
 .hand {
