Show gap between top of pile and card to be played in PileView

--- a/src/App.css
+++ b/src/App.css
@@ -173,6 +173,16 @@
   font-size: calc(10px + 1vmin);
 }
 
+.gap-text {
+  margin-bottom: 5px;
+  font-size: 10pt;
+}
+
+.gap-jumpback {
+  color: lawngreen;
+  font-weight: bold;
+}
+
 .start-text {
   font-size: 36px;
 }
