--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,11 @@
   font-size: 10pt;
 }
 
+.checkbox-label-small {
+  text-align: left;
+  font-size: 10pt;
+}
+
 .starting-player-selector-text {
   font-size: 12pt;
 }
