Highlight cards that have just been played in green

--- a/src/App.css
+++ b/src/App.css
@@ -404,6 +404,10 @@
   background-color: dodgerblue;
 }
 
+.card-just-played {
+  background-color: lawngreen;
+}
+
 .card-button {
   display: block;
 }
