Add basic pile history information at bottom of PileView, toggled by a button

--- a/src/App.css
+++ b/src/App.css
@@ -241,6 +241,21 @@
   display: block;
 }
 
+.history-button {
+  display: block;
+}
+
+.history-container {
+  padding: 0px 5px;
+  overflow-x: auto;
+  white-space: nowrap;
+  max-width: 100px;
+}
+
+.history-text {
+  font-size: 10pt;
+}
+
 .grid {
   display: grid;
 }
