--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,9 @@
   }
 }
 
-.name-field {
+.ui.input.name-field > input {
   text-align: center;
+  padding: 0.5rem;
 }
 
 .margin-right {
@@ -85,6 +86,32 @@
   overflow-y: auto;
 }
 
+.servers-header {
+  font-size: 18pt;
+  text-align: left;
+}
+
+.server-list {
+  max-height: 70vh;
+  align-items: baseline;
+  padding: 5px;
+  border-radius: 10px;
+  background-color: lightskyblue;
+}
+
+.server-card {
+  display: flex;
+  justify-content: space-between;
+  background-color: cornflowerblue;
+  padding: 5px 5px 5px 10px;
+  border-radius: 10px;
+  min-width: 200px;
+}
+
+.server-name {
+  font-size: 16pt;
+}
+
 .player-list {
   max-height: 70vh;
   align-items: baseline;
@@ -100,6 +127,10 @@
   padding: 5px;
   border-radius: 10px;
   min-width: 200px;
+}
+
+.player-name {
+  font-size: 12pt;
 }
 
 .room-list {
@@ -128,6 +159,10 @@
   min-width: 400px;
 }
 
+.room-name {
+  font-size: 14pt;
+}
+
 .text-align-left {
   text-align: left;
 }
@@ -135,14 +170,6 @@
 .text-center-right {
   text-align: right;
   align-items: center;
-}
-
-.player-name {
-  font-size: 12pt;
-}
-
-.room-name {
-  font-size: 14pt;
 }
 
 .player-count {
@@ -293,6 +320,11 @@
 .flex-top {
   display: flex;
   align-items: flex-start;
+}
+
+.flex-middle {
+  display: flex;
+  align-items: center;
 }
 
 .flex-bottom {
