--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,13 @@
   }
 }
 
+.ui.button.no-margin {
+  margin: unset;
+}
+
 .ui.input.name-field > input {
   text-align: center;
-  padding: 0.5rem;
+  font-size: 1rem;
 }
 
 .margin-right {
@@ -112,6 +116,11 @@
   font-size: 16pt;
 }
 
+.players-header {
+  font-size: 18pt;
+  text-align: left;
+}
+
 .player-list {
   max-height: 70vh;
   align-items: baseline;
@@ -126,7 +135,7 @@
   background-color: cornflowerblue;
   padding: 5px;
   border-radius: 10px;
-  min-width: 200px;
+  min-width: 300px;
 }
 
 .player-name {
@@ -147,7 +156,7 @@
   background-color: darkcyan;
   padding: 5px;
   border-radius: 10px;
-  min-width: 400px;
+  min-width: 200px;
 }
 
 .room-card-in-progress {
@@ -156,11 +165,16 @@
   background-color: firebrick;
   padding: 5px;
   border-radius: 10px;
-  min-width: 400px;
+  min-width: 200px;
 }
 
 .room-name {
   font-size: 14pt;
+}
+
+.ui.buttons .or.flex-or {
+  width: unset;
+  height: unset;
 }
 
 .text-align-left {
