--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,11 @@
   font-size: 12pt;
 }
 
+.rooms-header {
+  font-size: 18pt;
+  text-align: left;
+}
+
 .room-list {
   max-height: 70vh;
   align-items: baseline;
@@ -175,10 +180,6 @@
 .ui.buttons .or.flex-or {
   width: unset;
   height: unset;
-}
-
-.text-align-left {
-  text-align: left;
 }
 
 .text-center-right {
