--- a/src/App.css
+++ b/src/App.css
@@ -247,38 +247,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 10px;
+  margin: 5px;
 }
 
 .pile {
-  margin: 5px;
+  margin-bottom: 10px;
   min-width: 100px;
-  border: 1px solid white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
-.pile-on-fire {
-  margin: 5px;
-  min-width: 100px;
-  border: 1px solid white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.pile.on-fire {
   background-color: darkorange;
 }
 
-.pile-destroyed {
-  margin: 5px;
-  min-width: 100px;
-  border: 1px solid white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.pile.destroyed {
   background-color: darkred;
 }
 
@@ -384,7 +365,7 @@
 
 .gap-text {
   margin-bottom: 5px;
-  font-size: 10pt;
+  font-size: 1rem;
 }
 
 .gap-jumpback {
@@ -393,7 +374,12 @@
 }
 
 .start-text {
-  font-size: 36px;
+  margin-bottom: 5px;
+}
+
+.start-text > span {
+  display: block;
+  font-size: 1.5em;
 }
 
 .player-hand {
@@ -460,14 +446,14 @@
   margin: 5px;
   min-width: 60px;
   border: 1px solid white;
-  font-size: 24px;
+  font-size: 1rem;
 }
 
 .card-just-played {
   margin: 5px;
   min-width: 60px;
   border: 1px solid white;
-  font-size: 24px;
+  font-size: 1rem;
   background-color: lawngreen;
 }
 
@@ -475,7 +461,7 @@
   margin: 5px;
   min-width: 60px;
   border: 1px solid white;
-  font-size: 24px;
+  font-size: 1rem;
   background-color: dodgerblue;
 }
 
@@ -483,7 +469,7 @@
   margin: 5px;
   min-width: 60px;
   border: 1px solid white;
-  font-size: 24px;
+  font-size: 1rem;
   background-color: lawngreen;
   background-image: -webkit-linear-gradient(65deg, lawngreen 50%, dodgerblue 50%);
 }
@@ -491,6 +477,20 @@
 .card-selected {
   border: 1px solid yellow;
   color: yellow;
+}
+
+.card-button {
+  margin: 5px;
+  font-size: 24px;
+}
+
+.card-button > .ui.button {
+  width: 60px;
+  height: 60px;
+}
+
+.card-button.on-fire > .ui.button {
+  background-color: dodgerblue;
 }
 
 .ui.button.card-button {
