--- a/src/App.css
+++ b/src/App.css
@@ -243,13 +243,20 @@
   width: 80px;
 }
 
+.piles-container {
+  display: flex;
+  justify-content: center;
+}
+
 .pile-container {
   margin: 5px;
 }
 
 .pile {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   min-width: 100px;
+  background-color: cadetblue;
+  border-radius: calc(2rem / 7);
 }
 
 .pile.on-fire {
@@ -260,30 +267,56 @@
   background-color: darkred;
 }
 
-.ui.button.pile-button {
-  display: block;
-  padding: 0.5em;
+.pile > .ui.progress.attached, .pile > .ui.progress.attached > .bar {
+  height: 0.4rem;
+}
+
+.pile > .ui.progress.attached > .bar {
+  min-width: unset;
+}
+
+.pile-buttons-container {
+  display: flex;
 }
 
 .ui.button.mulligan-button {
-  display: block;
+  display: flex;
   padding: 0.5em;
 }
 
 .ui.button.history-button {
-  display: block;
+  display: flex;
   padding: 0.5em;
 }
 
 .history-container {
-  padding: 0px 5px;
-  overflow-x: auto;
+  display: flex;
+  width: 500px;
+  height: 60px;
+  background-color: darkmagenta;
+  border-radius: calc(2rem / 7);
+  overflow-x: scroll;
   white-space: nowrap;
-  max-width: 100px;
 }
 
 .history-text {
   font-size: 10pt;
+}
+
+.history-cards {
+  display: flex;
+  padding: 0px 5px;
+}
+
+.history-card-container {
+  display: flex;
+  align-items: center;
+}
+
+.history-card-container .card {
+  width: 40px;
+  height: 40px;
+  font-size: 1rem;
 }
 
 .grid {
@@ -370,13 +403,10 @@
   font-weight: bold;
 }
 
-.start-text {
-  margin-bottom: 5px;
-}
-
 .start-text > span {
   font-size: 1.5em;
   font-weight: bold;
+  line-height: initial;
 }
 
 .top-container {
